--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
       rel="stylesheet"
     />
-    <link href="css/blog.css" rel="stylesheet" />
+    <link href="blog.css" rel="stylesheet" />
   </head>
 
   <body>
